Fixing mobile slider spacing for esg subpage -diversity

--- a/src/themes/hello-theme-child/assets/css/theme.css
+++ b/src/themes/hello-theme-child/assets/css/theme.css
@@ -627,3 +627,10 @@ h6 {
   margin-left: 4vw;
   padding: 0 10% 0 0 !important;
 }
+
+@media (max-width: 480px) {
+  #diversity-slider .from-carousel .slick-list {
+    padding: 0 20% 0 0 !important;
+    margin-left: 6vw;
+  }
+}
